# CreatyOS

./: .gitignore  AGENTS.md  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation_project_hierarchy.py  (+11 more)
backend/app/: __init__.py  api.py  artifact_contracts.py  config.py  db.py  main.py  models.py  schemas.py  services.py
backend/tests/: test_artifacts_phase_1_2.py  test_audiovisual_score_phase_3_1.py  test_audiovisual_score_phase_3_2.py  test_audiovisual_score_phase_3_3.py  test_audiovisual_score_phase_3_4.py  test_creative_inputs_phase_1_4.py  test_decisions_phase_1_3.py  test_foundation_phase_1_1.py  test_studio_brain_phase_2_1.py  test_studio_brain_phase_2_2.py  test_studio_brain_phase_2_3.py  test_studio_brain_phase_2_4.py
docs/: creative_director_os_build_plan.md  creative_director_os_reference_architecture.md  glossary.md  runbook.md  testing.md
docs/contracts/: anti_slop_gate_contract.md  audiovisual_score_api.md  creative_input_api.md  decision_log_api.md  foundation_phase_1_1_api.md  living_film_artifact_version_api.md  studio_brain_blackboard_api.md
docs/decisions/: 0001-canonical-reference-architecture.md  0002-milestone-0-docs-only.md  0003-script-is-input-not-source-of-truth.md  0004-foundation-monolith-backend-stack.md  0005-foundation-api-trusted-internal-boundary.md  0006-deterministic-studio-brain-blackboard.md
docs/milestones/: milestone_0.md  milestone_1.md  milestone_2.md  milestone_3.md
docs/specs/: living_film_model.md  product_doctrine_and_anti_slop.md
scripts/: verify.sh
