[project]
name = "creative-director-os"
version = "0.1.0"
description = "Creative Director OS foundation monolith"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
